--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "symfony/var-dumper": "^4.0",
         "symfony/console": "^4.0",
         "vlucas/phpdotenv": "^2.4",
-        "symfony/finder": "^4.0"
+        "symfony/finder": "^4.0",
+        "illuminate/container": "^5.6"
     },
     "license": "MIT",
     "authors": [
