bare-bones deploy command

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
+# local assets
 LOCAL_ASSETS_DIR=/path/to/assets
+
+# remote assets
+DEPLOY_REGION=us-east-1
+DEPLOY_BUCKET=the-bucket-name
+DEPLOY_ENDPOINT=https://some-s3-compat-endpoint.com
+DEPLOY_KEY=fake-deploy-key
+DEPLOY_SECRET=fake-deploy-secret
