more file fixing for clean command

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@friends-library/phipps",
   "version": "1.0.0",
   "license": "MIT",
+  "scripts": {
+    "test": "php vendor/bin/phpunit",
+    "test:watch": "php vendor/bin/phpunit-watcher watch"
+  },
   "dependencies": {
     "@friends-library/friends": "git://github.com/friends-library/friends.git#72d9dfc9c024f3961e9a3c051010ee7fc5da2c68"
   }
