--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,12 @@
         "symfony/console": "^4.0",
         "vlucas/phpdotenv": "^2.4",
         "symfony/finder": "^4.0",
-        "illuminate/container": "^5.6"
+        "illuminate/container": "^5.6",
+        "phpunit/phpunit": "^7.0",
+        "spatie/phpunit-watcher": "^1.5"
+    },
+    "scripts": {
+      "test:watch": "phpunit-watcher watch"
     },
     "license": "MIT",
     "authors": [
