--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "symfony/finder": "^4.0",
         "illuminate/container": "^5.6",
         "phpunit/phpunit": "^7.0",
-        "spatie/phpunit-watcher": "^1.5"
+        "spatie/phpunit-watcher": "^1.5",
+        "symfony/yaml": "^4.0"
     },
     "scripts": {
       "test:watch": "phpunit-watcher watch"
